--- a/src/pages/Hero.css
+++ b/src/pages/Hero.css
@@ -1,7 +1,7 @@
 /* Main container */
 .main-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     /*max-width: 1200px;*/
     padding: 0px 20px; /* Equal padding on both sides */
@@ -13,7 +13,6 @@
     min-height: calc(100vh - 80px);
     margin-top: 70px;
     min-width: 100%;
-    gap: 20px;
     
    
     
@@ -30,11 +29,11 @@
 /* Left div with text */
 .left-div {
     text-align: left; /* Aligns text to the left */
-    font-size: 1.8em;
+    font-size: 2.2em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: black;
 }
-span{
+.left-div span{
     color:#551A8B;
 }
 /* Image styling */
@@ -48,6 +47,7 @@ span{
     background-clip: content-box, border-box;
     padding: 5px; /* Adds a bit of space for the gradient effect */
     object-fit: cover; /* Ensures the image fills the circle */
+    border: solid black;
 }
 
 /* Adjustments for responsiveness */
@@ -70,7 +70,13 @@ span{
     }
 
     .left-div h1 h2{
-        font-size: 2rem;
+      
+        
+    }
+
+    .left-div{
+     
+        text-align: center;
     }
 }
 
