--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -7,21 +7,62 @@
     min-width: 100%;
     background-color: #f5fffa;
     opacity: 0;
-    transform: translateY(-100px); /* Start position off-screen */
-    animation: slideInFromTop 0.9s ease-out forwards; /* Trigger the animation */
+    transform: translateY(-100px);
+    animation: slideInFromTop 0.9s ease-out forwards;
     min-height: calc(100vh - 80px);
+    padding-bottom: 20px; /* Add padding at the bottom */
+  }
+  
+  .form-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px; /* Space above the form */
+    margin-bottom: 20px; /* Space below the form */
+  
+  }
+  
+  .form-container input[type="email"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+  }
+  
+  .form-container button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #8e24aa;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .form-container button:hover {
+    background-color: #7b1fa2;
+  }
+  
+  .note {
+    margin-top: 10px;
+    font-size: 12px;
+    color: #666;
+    text-align: center;
   }
   
   /* Slide-in animation */
   @keyframes slideInFromTop {
     to {
       opacity: 1;
-      transform: translateY(0); /* Final position */
+      transform: translateY(0);
     }
   }
   
   .cover-photo {
-    background-color: #e0f7fa; /* Light blue */
+    background-color: #e0f7fa;
     height: 180px;
   }
   
@@ -48,6 +89,7 @@
   
   .profile-header .emoji {
     font-size: 24px;
+    color: aqua;
   }
   
   .profile-header p {
@@ -101,31 +143,31 @@
   /* Media query for larger screens */
   @media (min-width: 768px) {
     .profile {
-      max-width: 80%; /* Increase container width to 80% on larger screens */
-      font-size: 1.2em; /* Scale up font size */
+      max-width: 80%;
+      font-size: 1.2em;
     }
   
     .profile-header h1 {
-      font-size: 32px; /* Increase font size of the name */
+      font-size: 32px;
     }
   
     .profile-header p,
     .bio,
     .footer-text {
-      font-size: 18px; /* Increase font size of text content */
+      font-size: 18px;
     }
   
     .follow-button {
-      font-size: 16px; /* Make the follow button text larger */
-      padding: 10px 20px; /* Increase button padding */
+      font-size: 16px;
+      padding: 10px 20px;
     }
   
     .profile-links {
-      font-size: 18px; /* Make links text larger */
+      font-size: 18px;
     }
   
     .profile-links .icon {
-      font-size: 20px; /* Increase icon size */
+      font-size: 20px;
     }
   }
   
