--- a/src/static/Header.css
+++ b/src/static/Header.css
@@ -1,245 +1,195 @@
+/* Global Reset */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body.dark-theme {
-    background-color: black;
-    color: white;
-  }
-  
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .light-theme {
-    background-color: white;
-    color: black;
-  }
-  
-  .dark-theme {
-    background-color: black;
-    color: white;
-  }
+/* Dark and Light Theme Styles */
+body.dark-theme {
+  background-color: black;
+  color: white;
+}
 
+/* Light theme keeps its default colors without extra styling */
 
-
-.top{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color:white;
-    box-shadow: 0px 5px 5px -5px #111;
+/* Header Styles */
+.top {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0px 5px 5px -5px #111;
 }
 
 .hamburger {
-    display: none;
-    font-size: 1.5em;
-    cursor: pointer;
-  }
-
-nav a{
-    text-decoration: none;
-    margin: 0px 20px;
-    font-size: large;
-    font-weight: bold;
-    color: rgb(204,0,136);
-
+  display: none;
+  font-size: 1.5em;
+  cursor: pointer;
 }
 
-
-
-.top p{
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: x-large;
-font-weight: bold; /* Optional */
-background-image: linear-gradient(45deg, #FF6B6B, #4ECDC4);
--webkit-background-clip: text;
-color: transparent;
-
+nav a {
+  text-decoration: none;
+  margin: 0px 20px;
+  font-size: large;
+  font-weight: bold;
+  color: rgb(204,0,136);
 }
 
+.top p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: x-large;
+  font-weight: bold;
+  background-image: linear-gradient(45deg, #FF6B6B, #4ECDC4);
+  -webkit-background-clip: text;
+  color: transparent;
+}
 
-
-
-
-        /* From Uiverse.io by bandirevanth */ 
-/* Switch starts here */
+/* Dark Mode Switch */
 .rocker {
-    display: inline-block;
-    position: relative;
-    /*
-    SIZE OF SWITCH
-    ==============
-    All sizes are in em - therefore
-    changing the font-size here
-    will change the size of the switch.
-    See .rocker-small below as example.
-    */
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-    color: #888;
-    width: 7em;
-    height: 4em;
-    overflow: hidden;
-    border-bottom: 0.5em solid #eee;
-  }
-  
-  .rocker-small {
-    font-size: 0.75em;
-   /* Sizes the switch */
-    margin: 1em;
-  }
-  
-  .rocker::before {
-    content: "";
+  display: inline-block;
+  position: relative;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  color: #888;
+  width: 7em;
+  height: 4em;
+  overflow: hidden;
+  border-bottom: 0.5em solid #eee;
+}
+
+.rocker-small {
+  font-size: 0.75em;
+  margin: 1em;
+}
+
+.rocker::before {
+  content: "";
+  position: absolute;
+  top: 0.5em;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #999;
+  border: 0.5em solid #eee;
+  border-bottom: 0;
+}
+
+.rocker input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch-left,
+.switch-right {
+  cursor: pointer;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.5em;
+  width: 3em;
+  transition: 0.2s;
+  user-select: none;
+}
+
+.switch-left {
+  height: 2.4em;
+  width: 2.75em;
+  left: 0.85em;
+  bottom: 0.4em;
+  background-color: #ddd;
+  transform: rotate(15deg) skewX(15deg);
+}
+
+.switch-right {
+  right: 0.5em;
+  bottom: 0;
+  background-color: #bd5757;
+  color: #fff;
+}
+
+.switch-left::before,
+.switch-right::before {
+  content: "";
+  position: absolute;
+  width: 0.4em;
+  height: 2.45em;
+  bottom: -0.45em;
+  background-color: #ccc;
+  transform: skewY(-65deg);
+}
+
+.switch-left::before {
+  left: -0.4em;
+}
+
+.switch-right::before {
+  right: -0.375em;
+  background-color: transparent;
+  transform: skewY(65deg);
+}
+
+input:checked + .switch-left {
+  background-color: #0084d0;
+  color: #fff;
+  bottom: 0px;
+  left: 0.5em;
+  height: 2.5em;
+  width: 3em;
+  transform: rotate(0deg) skewX(0deg);
+}
+
+input:checked + .switch-left::before {
+  background-color: transparent;
+  width: 3.0833em;
+}
+
+input:checked + .switch-left + .switch-right {
+  background-color: #ddd;
+  color: #888;
+  bottom: 0.4em;
+  right: 0.8em;
+  height: 2.4em;
+  width: 2.75em;
+  transform: rotate(-15deg) skewX(-15deg);
+}
+
+input:checked + .switch-left + .switch-right::before {
+  background-color: #ccc;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
     position: absolute;
-    top: 0.5em;
+    top: 60px;
     left: 0;
     right: 0;
-    bottom: 0;
-    background-color: #999;
-    border: 0.5em solid #eee;
-    border-bottom: 0;
+    background-color: #fff;
+    flex-direction: column;
+    padding: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   }
-  
-  .rocker input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .switch-left,
-  .switch-right {
-    cursor: pointer;
-    position: absolute;
+
+  .nav-links.active {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.5em;
-    width: 3em;
-    transition: 0.2s;
-    user-select: none;
   }
-  
-  .switch-left {
-    height: 2.4em;
-    width: 2.75em;
-    left: 0.85em;
-    bottom: 0.4em;
-    background-color: #ddd;
-    transform: rotate(15deg) skewX(15deg);
-  }
-  
-  .switch-right {
-    right: 0.5em;
-    bottom: 0;
-    background-color: #bd5757;
-    color: #fff;
-  }
-  
-  .switch-left::before,
-  .switch-right::before {
-    content: "";
-    position: absolute;
-    width: 0.4em;
-    height: 2.45em;
-    bottom: -0.45em;
-    background-color: #ccc;
-    transform: skewY(-65deg);
-  }
-  
-  .switch-left::before {
-    left: -0.4em;
-  }
-  
-  .switch-right::before {
-    right: -0.375em;
-    background-color: transparent;
-    transform: skewY(65deg);
-  }
-  
-  input:checked + .switch-left {
-    background-color: #0084d0;
-    color: #fff;
-    bottom: 0px;
-    left: 0.5em;
-    height: 2.5em;
-    width: 3em;
-    transform: rotate(0deg) skewX(0deg);
-  }
-  
-  input:checked + .switch-left::before {
-    background-color: transparent;
-    width: 3.0833em;
-  }
-  
-  input:checked + .switch-left + .switch-right {
-    background-color: #ddd;
-    color: #888;
-    bottom: 0.4em;
-    right: 0.8em;
-    height: 2.4em;
-    width: 2.75em;
-    transform: rotate(-15deg) skewX(-15deg);
-  }
-  
-  input:checked + .switch-left + .switch-right::before {
-    background-color: #ccc;
-  }
-  
-  /* Keyboard Users */
-  input:focus + .switch-left {
-    color: #333;
-  }
-  
-  input:checked:focus + .switch-left {
-    color: #fff;
-  }
-  
-  input:focus + .switch-left + .switch-right {
-    color: #fff;
-  }
-  
-  input:checked:focus + .switch-left + .switch-right {
-    color: #333;
-  }
-  
-  /* */
 
-  
-
-
-  @media (max-width: 768px) {
-    .nav-links {
-      display: none; /* Hide nav links on mobile */
-      position: absolute;
-      top: 60px;
-      left: 0;
-      right: 0;
-      background-color: #fff;
-      flex-direction: column;
-      padding: 10px;
-      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-      
-    }
-  
-    .nav-links.active {
-      display: flex; /* Show nav links when active */
-    }
-  
-    .hamburger {
-      display: block; /* Show hamburger icon on mobile */
-    }
-  
-    .nav-links a {
-      margin: 10px 0;
-    }
+  .hamburger {
+    display: block;
   }
+
+  .nav-links a {
+    margin: 10px 0;
+  }
+}
